# api/controller/rateController.go
@@ -2,20 +2,22 @@ package controller
 
 import (
 	constants "CurrencyRateApp/domain"
-	"CurrencyRateApp/domain/model"
 	"CurrencyRateApp/service"
+	"context"
 	"net/http"
-	"strconv"
-	"strings"
 
 	"github.com/gin-gonic/gin"
 )
 
-type RateController struct {
-	rateService service.RateProvider
+type RateServiceInterface interface {
+	FetchExchangeRate(ctx context.Context, coins []string, currencies []string, precision uint) (service.ExchangeRateResponse, error)
 }
 
-func NewRateController(rateService service.RateProvider) *RateController {
+type RateController struct {
+	rateService RateServiceInterface
+}
+
+func NewRateController(rateService RateServiceInterface) *RateController {
 	return &RateController{
 		rateService: rateService,
 	}
@@ -34,82 +36,12 @@ func (r *RateController) GetBitcoinToUahExchangeRate(c *gin.Context) {
 	currencies := []string{constants.UAH}
 	precision := 2
 
-	var options = service.ExchangeRateOptions{
-		Coins:      coins,
-		Currencies: currencies,
-		Precision:  uint(precision),
-	}
-
-	rates, err := r.rateService.FetchExchangeRate(c, options)
+	rates, err := r.rateService.FetchExchangeRate(c, coins, currencies, uint(precision))
 	if err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
 
-	exchangeRate := rates.Rates["bitcoin"]["uah"]
-	c.JSON(http.StatusOK, exchangeRate)
-}
-
-// GetCoinExchangeRate godoc
-// @Summary Get the exchange rate for a crypto coin
-// @Description Returns the current exchange rate for a crypto coin
-// @Tags rate
-// @Accept multipart/form-data
-// @Produce json
-// @Param coins formData string true "Comma-separated list of crypto coins"
-// @Param currencies formData string true "Comma-separated list of currencies"
-// @Param precision formData string true "Precision of the exchange rate"
-// @Success 200
-// @Failure 400
-// @Router /exchange-rate [post]
-func (r *RateController) GetCoinExchangeRate(c *gin.Context) {
-	coins := c.PostForm("coins")
-	currencies := c.PostForm("currencies")
-	precisionStr := c.PostForm("precision")
-
-	availableCoins := model.GetAvailableCoins()
-
-	if !validateInput(coins, availableCoins) {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid coins selected."})
-		return
-	}
-
-	precision, err := strconv.ParseUint(precisionStr, 10, 32)
-	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-		return
-	}
-
-	var options = service.ExchangeRateOptions{
-		Coins:      strings.Split(coins, ","),
-		Currencies: strings.Split(currencies, ","),
-		Precision:  uint(precision),
-	}
-
-	rates, err := r.rateService.FetchExchangeRate(c, options)
-	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-		return
-	}
-
-	c.JSON(http.StatusOK, rates)
-}
-
-func validateInput(coins string, allowedValues []string) bool {
-	values := strings.Split(coins, ",")
-	for _, v := range values {
-		if !contains(allowedValues, v) {
-			return false
-		}
-	}
-	return true
-}
-
-func contains(slice []string, item string) bool {
-	for _, s := range slice {
-		if s == item {
-			return true
-		}
-	}
-	return false
+	exchangeRate := rates.Rates[constants.BITCOIN]
+	c.JSON(http.StatusOK, exchangeRate[constants.UAH])
 }
